force-app/main/default/objects/Proposal__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <description>Used to pass access code from partner to unlock certain provisions</description>
    <inlineHelpText>Used to pass access code from partner to unlock certain provisions</inlineHelpText>
    <label>Access Code</label>
    <type>TextArea</type>
</CustomField>