force-app/main/default/objects/Proposal__c/fields/Additional_Financial_Professional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Financial_Professional_Emails__c</fullName>
    <label>Additional Financial Professional Emails</label>
    <type>TextArea</type>
</CustomField>