force-app/main/default/objects/Proposal__c/fields/Additional_Financial_Professional_NPNs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Financial_Professional_NPNs__c</fullName>
    <label>Additional Financial Professional NPNs</label>
    <type>TextArea</type>
</CustomField>