force-app/main/default/objects/Proposal__c/fields/Advisor_Account__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proposals (Advisor Account)</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>