force-app/main/default/objects/Proposal__c/fields/Advisor_Comp_Collection_Type__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Comp_Collection_Type__c</fullName>
    <label>Advisor Comp Collection Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>