force-app/main/default/objects/Proposal__c/fields/Advisor_Compensation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Compensation_Mode__c</fullName>
    <label>Advisor Compensation Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>