force-app/main/default/objects/Proposal__c/fields/Advisor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advisor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisor&apos;s Proposals</relationshipLabel>
    <relationshipName>Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>