force-app/main/default/objects/Proposal__c/fields/Advisor_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Contact_Id__c</fullName>
    <formula>Advisor_Contact__r.Contact_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Contact Id</label>
    <type>Text</type>
</CustomField>