force-app/main/default/objects/Proposal__c/fields/Advisor_CRD__c.field-meta.xml
<CustomField>
    <fullName>Advisor_CRD__c</fullName>
    <label>Advisor CRD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>