force-app/main/default/objects/Proposal__c/fields/Advisor_Email__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Email__c</fullName>
    <formula>Advisor_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advisor Email</label>
    <type>Text</type>
</CustomField>