force-app/main/default/objects/Proposal__c/fields/Advisor_Included__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Included__c</fullName>
    <label>Advisor Included</label>
    <length>255</length>
    <type>Text</type>
</CustomField>