force-app/main/default/objects/Proposal__c/fields/Advisor_NPN__c.field-meta.xml
<CustomField>
    <fullName>Advisor_NPN__c</fullName>
    <label>Advisor NPN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>