force-app/main/default/objects/Proposal__c/fields/Advisor_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Zip_Code__c</fullName>
    <formula>LPAD(Advisor_Contact__r.MailingPostalCode, 5, &apos;0&apos; )</formula>
    <label>Advisor Zip Code</label>
    <type>Text</type>
</CustomField>