force-app/main/default/objects/Proposal__c/fields/Annual_Base_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Base_Fee__c</fullName>
    <label>Annual Base Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>