force-app/main/default/objects/Proposal__c/fields/Annual_Per_Head_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Per_Head_Fee__c</fullName>
    <label>Annual Per Head Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>