force-app/main/default/objects/Proposal__c/fields/Any_Current_Legal_Proceedings__c.field-meta.xml
<CustomField>
    <fullName>Any_Current_Legal_Proceedings__c</fullName>
    <description>Does the company have any current legal proceedings?</description>
    <inlineHelpText>Does the company have any current legal proceedings?</inlineHelpText>
    <label>Any Current Legal Proceedings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>