force-app/main/default/objects/Proposal__c/fields/Auto_Deferral_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Deferral_Type__c</fullName>
    <inlineHelpText>Value obtained from Auto_Enrollment_Deferral_Escalation_Rate__c via Custom Metadata Types</inlineHelpText>
    <label>Auto Deferral Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>