force-app/main/default/objects/Proposal__c/fields/Auto_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Auto_Enrollment__c</fullName>
    <label>Auto-Enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>EACA</fullName>
            </value>
            <value>
                <fullName>QACA</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>