force-app/main/default/objects/Proposal__c/fields/Basis_Point_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basis_Point_Compensation_Amount__c</fullName>
    <description>Created for jotform advisor proposal form.  Stamped directly from form</description>
    <label>Basis Point Compensation Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>