force-app/main/default/objects/Proposal__c/fields/Brokerage_Accounts_PCRA__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Accounts_PCRA__c</fullName>
    <label>Brokerage Accounts (PCRA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>