force-app/main/default/objects/Proposal__c/fields/Company_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact_First_Name__c</fullName>
    <label>Company Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>