force-app/main/default/objects/Proposal__c/fields/Company_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact_Last_Name__c</fullName>
    <label>Company Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>