force-app/main/default/objects/Proposal__c/fields/Company_EIN__c.field-meta.xml
<CustomField>
    <fullName>Company_EIN__c</fullName>
    <label>Company EIN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>