force-app/main/default/objects/Proposal__c/fields/Company_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Code__c</fullName>
    <formula>LPAD(TEXT(Company_Zip_Postal_Code__c), 5, &apos;0&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Zip Code</label>
    <type>Text</type>
</CustomField>