force-app/main/default/objects/Proposal__c/fields/Company_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Zip_Postal_Code__c</fullName>
    <label>Company Zip/Postal Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>