force-app/main/default/objects/Proposal__c/fields/Compensation_Type__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type__c</fullName>
    <description>Created for jotform advisor proposal form.  Related to the basis point/flat fee compensation amount fields</description>
    <label>Compensation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUM Percentage</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>