force-app/main/default/objects/Proposal__c/fields/Contact_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Job_Title__c</fullName>
    <label>Contact Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>