force-app/main/default/objects/Proposal__c/fields/Controlled_Affiliated_Group_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Affiliated_Group_Company_Name__c</fullName>
    <description>Name of company from controlled or affiliated service group</description>
    <inlineHelpText>Name of company from controlled or affiliated service group</inlineHelpText>
    <label>Controlled/Affiliated Group Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>