force-app/main/default/objects/Proposal__c/fields/Conversion_Needed__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conversion Needed</label>
    <type>Checkbox</type>
</CustomField>