force-app/main/default/objects/Proposal__c/fields/Current_401_k_provider__c.field-meta.xml
<CustomField>
    <fullName>Current_401_k_provider__c</fullName>
    <label>Current 401(k) provider</label>
    <length>50</length>
    <type>Text</type>
</CustomField>