force-app/main/default/objects/Proposal__c/fields/Current_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan__c</fullName>
    <label>Current Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>