force-app/main/default/objects/Proposal__c/fields/Current_Recent_SIMPLE_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Recent_SIMPLE_Plan__c</fullName>
    <description>Do you currently have or have had at any point in this calendar year, a SIMPLE plan?</description>
    <inlineHelpText>Do you currently have or have had at any point in this calendar year, a SIMPLE plan?</inlineHelpText>
    <label>Current/Recent SIMPLE Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>