force-app/main/default/objects/Proposal__c/fields/Current_Sponsor_of_Other_Plans__c.field-meta.xml
<CustomField>
    <fullName>Current_Sponsor_of_Other_Plans__c</fullName>
    <description>Do you currently sponsor any additional retirement plans (i.e., 403(b), cash balance, defined benefit)?</description>
    <inlineHelpText>Do you currently sponsor any additional retirement plans (i.e., 403(b), cash balance, defined benefit)?</inlineHelpText>
    <label>Current Sponsor of Other Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>