force-app/main/default/objects/Proposal__c/fields/Discretionary_Match__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match__c</fullName>
    <label>Discretionary Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>