force-app/main/default/objects/Proposal__c/fields/Discretionary_Match_Formula__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Formula__c</fullName>
    <description>What % Discretionary match will the employer be utilizing?</description>
    <inlineHelpText>What % Discretionary match will the employer be utilizing?</inlineHelpText>
    <label>Discretionary Match Formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>2% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>3% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>4% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>5% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>6% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>7% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>8% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>9% Discretionary Employer Match</fullName>
            </value>
            <value>
                <fullName>10% Discretionary Employer Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>