force-app/main/default/objects/Proposal__c/fields/Discretionary_Match_Formula_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Formula_Notes__c</fullName>
    <label>Discretionary Match Formula/Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>