force-app/main/default/objects/Proposal__c/fields/Employee_Loan_Availability__c.field-meta.xml
<CustomField>
    <fullName>Employee_Loan_Availability__c</fullName>
    <label>Employee Loan Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>