force-app/main/default/objects/Proposal__c/fields/Employee_Match__c.field-meta.xml
<CustomField>
    <fullName>Employee_Match__c</fullName>
    <label>Employee Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>