force-app/main/default/objects/Proposal__c/fields/Employer_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution__c</fullName>
    <label>Employer Contribution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>