force-app/main/default/objects/Proposal__c/fields/Employer_Contribution_Formula__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contribution_Formula__c</fullName>
    <label>Employer Contribution Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>