force-app/main/default/objects/Proposal__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <description>Populated with errors from Paradigm via Purchase API</description>
    <label>Errors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>