force-app/main/default/objects/Proposal__c/fields/Estimated_Annual_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Payroll__c</fullName>
    <label>Estimated Annual Payroll</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>