force-app/main/default/objects/Proposal__c/fields/External_Response__c.field-meta.xml
<CustomField>
    <fullName>External_Response__c</fullName>
    <label>External Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>