force-app/main/default/objects/Proposal__c/fields/Financial_Professional_Email__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Email__c</fullName>
    <label>Financial Professional Email</label>
    <type>Email</type>
</CustomField>