force-app/main/default/objects/Proposal__c/fields/Financial_Professional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Fees__c</fullName>
    <label>Financial Professional Fees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>