force-app/main/default/objects/Proposal__c/fields/Financial_Professional_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_First_Name__c</fullName>
    <label>Financial Professional First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>