force-app/main/default/objects/Proposal__c/fields/Financial_Professional_Phone__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Phone__c</fullName>
    <label>Financial Professional Phone</label>
    <type>Phone</type>
</CustomField>