force-app/main/default/objects/Proposal__c/fields/Financial_Professional_Role__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Role__c</fullName>
    <description>This field has a corresponding field on Contact that is updated via flow. If you add/remove a value here, do the same for the Contact field.</description>
    <label>Financial Professional Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>IAR</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>