force-app/main/default/objects/Proposal__c/fields/Financial_Professional_State__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_State__c</fullName>
    <label>Financial Professional State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>