force-app/main/default/objects/Proposal__c/fields/Financial_Professional_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Financial_Professional_Zip_Code__c</fullName>
    <label>Financial Professional Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>