force-app/main/default/objects/Proposal__c/fields/Flat_Fee_Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee_Compensation_Amount__c</fullName>
    <description>Created for jotform advisor proposal form.  Stamped directly from form</description>
    <label>Flat Fee Compensation Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>