force-app/main/default/objects/Proposal__c/fields/Force_Queue__c.field-meta.xml
<CustomField>
    <fullName>Force_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Queue</label>
    <type>Checkbox</type>
</CustomField>