force-app/main/default/objects/Proposal__c/fields/Government_Entity__c.field-meta.xml
<CustomField>
    <fullName>Government_Entity__c</fullName>
    <description>Is the company a government entity?</description>
    <inlineHelpText>Is the company a government entity?</inlineHelpText>
    <label>Government Entity?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>