force-app/main/default/objects/Proposal__c/fields/Grandfather_Date__c.field-meta.xml
<CustomField>
    <fullName>Grandfather_Date__c</fullName>
    <label>Grandfather Date</label>
    <type>Date</type>
</CustomField>