force-app/main/default/objects/Proposal__c/fields/IMO_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>IMO_Agent_Email__c</fullName>
    <label>IMO Agent Email</label>
    <type>Email</type>
</CustomField>