force-app/main/default/objects/Proposal__c/fields/IMO_Agent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>IMO_Agent_Last_Name__c</fullName>
    <label>IMO Agent Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>