force-app/main/default/objects/Proposal__c/fields/IMO_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>IMO_Agent_Phone__c</fullName>
    <label>IMO Agent Phone</label>
    <type>Phone</type>
</CustomField>