force-app/main/default/objects/Proposal__c/fields/IMO_Agent_State__c.field-meta.xml
<CustomField>
    <fullName>IMO_Agent_State__c</fullName>
    <label>IMO Agent State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>