force-app/main/default/objects/Proposal__c/fields/IMO_CRD__c.field-meta.xml
<CustomField>
    <fullName>IMO_CRD__c</fullName>
    <label>IMO CRD</label>
    <length>18</length>
    <type>Text</type>
</CustomField>