force-app/main/default/objects/Proposal__c/fields/IMO_Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>IMO_Firm_Name__c</fullName>
    <label>IMO Firm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>