force-app/main/default/objects/Proposal__c/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <formula>Opportunity__r.Implementation_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Status</label>
    <type>Text</type>
</CustomField>